--- a/service-page.html
+++ b/service-page.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 col-lg-4">
-                        <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/achievement-brainstorming-branding-1162968.jpg">
+                        <div class="card" style="height:605.883px;"><img class="card-img-top w-100 d-block" src="assets/img/achievement-brainstorming-branding-1162968.jpg">
                             <div class="card-body">
                                 <h4 class="card-title">OHS Consulting Services</h4>
                                 <p class="text-left card-text">- Occupational health and hygiene risk &nbsp; &nbsp; &nbsp; &nbsp; assessment<br>- Development of OH and hygiene &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; programs<br>- Safety program development<br>-
@@ -60,7 +60,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/bright-cardiac-cardiology-433267.jpg" style="height:273.771px;">
+                        <div class="card" style="height:605.883px;"><img class="card-img-top w-100 d-block" src="assets/img/bright-cardiac-cardiology-433267.jpg" style="height:273.771px;">
                             <div class="card-body">
                                 <h4 class="card-title">Occupaitonal Medical Services</h4>
                                 <p class="text-left card-text">- Physical examinations <br>- Lung function test<br>- Eye and hearing tests <br>- Vital signs<br>- Biological monitoring<br>- Employee wellness program &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
