--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <p>- Noise exposure assessments<br>- Lighting/Illumination surveys<br>- Asbestos exposure assessments<br>- Hazardous chemical substances<br>- Exposure to silica dust assessments<br>- Ergonomics assessments<br>- Indoor air quality
                             assessments<br>- Heat and cold stress assessment<br>- Human vibration surveys&nbsp;<br></p>
                     </div>
-                    <div class="col-md-5 feature-box"><a class="btn btn-outline-dark btn-lg" role="button" href="services-page.html" style="color:#60c659;">Services</a></div>
+                    <div class="col-md-5 feature-box"><a class="btn btn-outline-dark btn-lg" role="button" href="service-page.html" style="color:#60c659;">Services</a></div>
                 </div>
             </div>
         </section>
